--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    background: rgb(46, 172, 159);
+    background: radial-gradient(circle at 10% 20%, rgb(253, 239, 132) 0%, rgb(247, 198, 169) 54.2%, rgb(21, 186, 196) 100.3%);
+
 }
 
 .app {
@@ -18,6 +19,7 @@ body {
     margin: 100px auto;
     border-radius: 10px;
     padding: 30px;
+    box-shadow: 9px 11px 38px 11px rgba(0, 0, 0, 0.3);
 }
 
 .app h1 {
@@ -54,6 +56,7 @@ body {
 .btn:hover:not([disabled]) {
     background: #222;
     color: #fff;
+    transition: all 0.8s ease;
 }
 
 .btn:disabled {
